--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=demo
+server.port=8081
+
+
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/elearning?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Donald246.
+
+# Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Initialize DB from SQL files
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:/db/schema.sql
+spring.sql.init.data-locations=classpath:/db/data.sql
+
